fixed horizontal timeline top clipping issue

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -72,8 +72,9 @@
 .preview-page .timeline-container-horizontal {
   position: relative;
   margin-top: 100px;
-  height: 500px;
+  height: fit-content;
   width: fit-content;
+  padding-top: 100px;
 }
 .preview-page .timeline-container-horizontal::after {
   content: "";
@@ -92,12 +93,14 @@
   display: flex;
   align-items: flex-end;
   width: fit-content;
+  height: fit-content;
 }
 .preview-page .timeline-container-horizontal .entry-container {
   width: 250px;
   margin: 0px 150px 100px 0px;
   position: relative;
   display: inline-block;
+  height: fit-content;
 }
 .preview-page .timeline-container-horizontal .entry-content {
   position: relative;
